# Turtlebot3_sles_ros2

./: .gitignore  .gitmodules  .note.txt.swp  README.md  note.txt  sles_env.sh
docs/: basic_launch.md  data_collection_sop.md  experiment_protocol.md  real_world_mpc_nn_switching.md  real_world_nn_complete_guide.md  real_world_nn_pipeline.md
maps/: lab_map.pgm  lab_map.yaml
nav2/: nav2_params_real.yaml
scripts/: launch_simulation_diffusion.sh  launch_simulation_planner.sh  launch_simulation_planner_nn.sh
src/Config/: goal.yaml  slam_toolbox_sles.rviz
src/turtlebot3_sles_control/: CMakeLists.txt  package.xml
src/turtlebot3_sles_control/launch/: map_occupancy_plotter.launch.py  turtlebot3_planner.launch.py  turtlebot3_planner_NN.launch.py  turtlebot3_planner_NN_real_world.launch.py  turtlebot3_planner_diffusion.launch.py  turtlebot3_planner_diffusion_real_world.launch.py  turtlebot3_planner_real_world.launch.py  turtlebot3_planner_switch_MPC_NN.launch.py  turtlebot3_planner_switch_MPC_NN_real_world.launch.py  turtlebot3_planner_switch_MPC_diffusion_real_world.launch.py
src/turtlebot3_sles_control/scripts/: cmdvel_odom_plotter.py
src/turtlebot3_sles_control/turtlebot3_sles_control/: best_model.pth  best_model_diff.pth  deterministic_local_traj.py  flow_matching_model.py  map_occupancy_plotter.py  planner_diffusion.py  planner_diffusion_real_world.py  planner_haa_only.py  planner_haa_real_world.py  planner_nn.py  planner_nn_real_world.py  planner_switch_mpc_diffusion_real_world.py  planner_switch_mpc_nn.py  planner_switch_mpc_nn_real_world.py  policy_runner.py
src/turtlebot3_sles_control/turtlebot3_sles_spacemouse_control/: spacemouse_relay.py
src/turtlebot3_sles_data/: CMakeLists.txt  package.xml
src/turtlebot3_sles_data/turtlebot3_sles_data/: analyze_experiments.py  analyze_robot_data.py  augment_training_data.py  convert_json_to_npz.py  experiment_recorder.py  extract_obstacles_from_session.py  load_config_from_session.py  plot_simulation.py  prepare_training_data_real_world.py  robot_data_recorder_mpc.py  robot_data_recorder_real_world.py  summarize_robot_data_by_velocity.py
src/turtlebot3_sles_learning/: CMakeLists.txt  package.xml
src/turtlebot3_sles_learning/turtlebot3_sles_learning/: inference_diffusion.py  train_diffusion.py  train_mlp.py
src/turtlebot3_sles_learning/turtlebot3_sles_learning/policy/diffusion_policy/: MODEL_ARCHITECTURE.md  README_DETERMINISTIC_LOCAL_TRAJ.md  create_dataset.sh  create_dataset_imitation_local_traj.py  create_real_world_dataset.py  create_real_world_dataset.sh  diffusion_policy_model.py  flow_matching_model.py  infer.py  planner_switch_mpc_diffusion_real_world.py  policy_runner.py  train_deterministic.sh  train_deterministic_local_traj.py  train_diffusion.sh  train_diffusion_policy.py  train_diffusion_real.sh  train_flow.sh  train_flow_matching.py  train_flow_real.sh  visualize_trajectories.py
src/turtlebot3_sles_perception/: CMakeLists.txt  package.xml
src/turtlebot3_sles_perception/launch/: turtlebot3_simulate_lidar.launch.py  turtlebot3_simulate_lidar_random.launch.py  turtlebot3_simulate_mapping.launch.py
src/turtlebot3_sles_perception/resource/: I_table.npy
src/turtlebot3_sles_perception/turtlebot3_sles_perception/: sim_mapping.py  simulate_lidar_publisher.py  simulate_lidar_publisher_new.py
src/turtlebot3_sles_worlds/: CMakeLists.txt  package.xml  spawn_random_world.py
src/turtlebot3_sles_worlds/launch/: turtlebot3_custom_world_random.launch.py  turtlebot3_custom_world_test.launch.py
src/turtlebot3_sles_worlds/models/: obstacle_cir.sdf  obstacle_rec.sdf  obstacle_tri.sdf
src/turtlebot3_sles_worlds/worlds/: turtlebot3_custom_world_rectangle.world
