<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_sles_learning</name>
  <version>0.1.0</version>
  <description>Imitation learning training and inference scripts for TurtleBot3 SLES project</description>
  <maintainer email="ogawa3@illinois.edu">SLES</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
